--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Bankist | When Banking meets Minimalist</title>
+
+    <script defer src="script.js"></script>
   </head>
   <body>
     <header class="header">
@@ -321,14 +323,14 @@
       </ul>
       <img src="img/icon.png" alt="Logo" class="footer__logo" />
       <p class="footer__copyright">
-        &copy; Copyright by
+        Built by attending the online course
         <a
           class="footer__link twitter-link"
           target="_blank"
-          href="https://twitter.com/jonasschmedtman"
-          >Jonas Schmedtmann</a
-        >. Use for learning or your portfolio. Don't use to teach. Don't claim
-        as your own product.
+          href="https://www.udemy.com/course/the-complete-javascript-course/"
+          >"The Complete JavaScript Course 2021: From Zero to Expert!"
+        </a>
+        by Jonas Schmedtmann.
       </p>
     </footer>
 
@@ -349,7 +351,5 @@
       </form>
     </div>
     <div class="overlay hidden"></div>
-
-    <script src="script.js"></script>
   </body>
 </html>
